# audio-fetch

./: .env  README.md  links.json  pyproject.toml  requirements.txt
chrome-extension/: background.js  content.js  manifest.json
src/: api_server.py  config.py  downloader.py  logger.py  main.py  models.py  utils.py
