[project]
name = "audiofetch"
version = "0.1.0"
description = "Download audio from YouTube URLs as MP3 files"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["youtube", "downloader", "audio", "mp3", "cli"]
authors = [
    { name = "AudioFetch" },
]

dependencies = [
    "yt-dlp>=2024.12.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "loguru>=0.7.3",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
audiofetch = "src.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
